--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "body-parser": "1.x",
     "express": "4.x",
     "grunt-cli": "^0.1.13",
-    "jade": "1.x"
+    "jade": "1.x",
+    "request": "^2.36.0"
   }
 }
